--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,8 +5,8 @@ body {
   justify-content: center;
 }
 
-.avengers {
-  width: fit-content;
+.game {
+  width: 90vw;
   height: 95vh;
   margin: calc(5vh / 2) 0;
   padding: 20px;
@@ -15,78 +15,60 @@ body {
   position: relative;
 }
 
-.thanos {
+.game__name {
+ text-align: center;
+
+  h1 {
+    font-family: "Russo One", sans-serif;
+    color: $primary-color;
+  }
+
+  h2 {
+    font-size: 1.125em;
+    font-family: "Lobster Two", cursive;
+    text-align: right;
+    color: $secondary-color;
+  }
+}
+
+.game__thanos {
   padding-left: 50%;
   margin: 20px 0;
   position: relative;
+
+  &__img {
+    transform: translateX(-50%);
+  }
 }
 
-.thanosImg {
-  transform: translateX(-50%);
-}
-
-.game-name {
-  width: fit-content;
-}
-
-h1,
-.score {
-  font-family: "Russo One", sans-serif;
-  color: $primary-color;
-}
-
-h2 {
-  font-size: 1.125em;
-  font-family: "Lobster Two", cursive;
-  text-align: right;
-  color: $secondary-color;
-}
-
-p {
-  font-family: "Lato", sans-serif;
-}
-
-.game-board {
+.game__board {
   width: fit-content;
   margin: 0 auto;
   background: #fcfcfc;
   display: grid;
   grid-template-columns: repeat(8, 30px);
   grid-template-rows: repeat(9, 30px);
+
+  &__item {
+    position: relative;
+    cursor: pointer;
+
+    img {
+      width: 27px;
+      height: 27px;
+    }
+  }
 }
 
-.game-item img {
-  width: 27px;
-  height: 27px;
+.game__score {
+    font-family: "Russo One", sans-serif;
+    color: $primary-color;
+    font-size: 1em;
+    position: absolute;
+    bottom: 15px;
 }
 
-.thanos img,
-.game-item img {
-  cursor: pointer;
-}
-
-.game-item {
-  position: relative;
-}
-
-.score {
-  font-size: 1em;
-  position: absolute;
-  bottom: 15px;
-}
-
-.dust {
-  width: 240px;
-  height: 270px;
-  position: absolute;
-}
-
-.fake-game-board {
-  display: flex;
-  justify-content: center;
-}
-
-.byebye {
+.invisible {
   display: none;
 }
 
@@ -95,6 +77,8 @@ p {
   border-radius: 2px;
 }
 
-.invisible {
-  display: none;
+.dust {
+  //width: 240px;
+  //height: 270px;
+  position: absolute;
 }
