--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,7 @@ body {
   display: grid;
   grid-template-columns: repeat(8, 30px);
   grid-template-rows: repeat(9, 30px);
+  position: relative;
 
   &__item {
     position: relative;
@@ -81,4 +82,8 @@ body {
   //width: 240px;
   //height: 270px;
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
